<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:fadeScrollbars="false"
    tools:context=".ui.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/tv_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:id="@+id/editText_login"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/tv_senha"
        android:layout_below="@+id/editText_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:id="@+id/editText_senha" />

    <TextView
        android:text="@string/tv_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginEnd="10dp"
        android:layout_alignBaseline="@+id/editText_senha"
        android:layout_alignBottom="@+id/editText_senha"
        android:layout_toStartOf="@+id/editText_senha"
        tools:text="Senha" />

    <TextView
        android:text="@string/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        tools:text="Login"
        android:layout_marginEnd="10dp"
        android:layout_alignBaseline="@+id/editText_login"
        android:layout_alignBottom="@+id/editText_login"
        android:layout_toStartOf="@+id/editText_login" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:id="@+id/button_login"
        tools:text="@string/btn_login" />
</RelativeLayout>