<resources>
    <string name="app_name">MyFirstTestProject</string>
    <string name="action_settings">Settings</string>
    <string name="tv_senha">Senha</string>
    <string name="tv_login">Login</string>
    <string name="btn_login">Entrar</string>

    <string name="validation_message">Mensagem de teste, só para deixar o Espresso feliz</string>
    <string name="ok">Ok</string>
</resources>
